# esms-project

./: .gitignore  Dockerfile  README.md  nginx.cong
esms-backend/: .env  .env.example  Cargo.toml  README.md  docker-compose.yml
esms-backend/src/: config.rs  error.rs  fake_sensor.rs  fhir.rs  handlers.rs  main.rs  models.rs  state.rs  validation.rs  websocket.rs
esms-frontend/: app.js  index.html  styles.css
